sass/main.scss
html, body {
  //height: 100%;
}

html {
  overflow-y: scroll;
}

body {
  font: 14px/1.2 $Roboto;
  color: $default_t_color;
  background: #fff;
  min-width: $body_width;
  margin: 0 auto;

  &.no_transition {
    * {
      -webkit-transition: none !important;
      -ms-transition: none !important;
      transition: none !important;
    }
  }

  &.search_opened {
    height: 100vh;
    overflow: hidden;
  }
}

a {
  color: $violette;
}

.hide {
  display: none !important;
}

.clearfix:before, .clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

.wrapper {
  @extend %global_flex_block_column_nowrap_center_stretch;
  position: relative;
  min-height: 100vh;
  overflow: hidden;
  padding: 82px 0 0;
  margin: 0 auto;

  @include respond-to-min($resp_step_2) {
    padding-top: 92px;
  }
}

.main_content {
  @include flex(1 0 auto);
  //min-height: 2000px;
  position: relative;
}

.content_holder {
  @extend %clearfix;
  margin-left: -32px;
}

.content_block {
  float: left;
  width: 74.5%;
  padding-left: 32px;

  .content_block {
    float: none;
    width: auto;
    padding-left: 0;
  }
}

.aside_block {
  padding-left: 32px;
  padding-right: 14px;
  float: left;
  width: 25.5%;
}

.news_row {
  @extend %global_flex_block_row_wrap_flex-start;
  margin-left: -20px;

  .article_controls + & {
    margin-top: 40px;
  }

  @include respond-to-min($resp_step_2) {
    //margin-left: -28px;
  }
}

.news_col {
  float: left;
  padding-left: 32px;
  width: 50%;

  &._wide {
    width: 100%;
  }

  ._tags_mode & {
    margin-bottom: 14px;

    @include respond-to-min($resp_step_3) {
      margin-bottom: 18px;
    }
  }

  .search_body & {
    width: 33.3333%;

    .article_block._review {
      margin-bottom: 20px;
      padding-right: 40px;
      min-height: 0;

      .article_link {
        font-size: 14px !important;

        &:hover {
          color: $violette !important;
        }
      }

      .article_img {
        width: 88px !important;

        + .article_title {
          margin-right: 100px !important;
        }
      }

      .article_stat {
        padding-top: 5px;
      }
    }
  }

  ._col_3 & {
    width: 33.3333%;
    margin-bottom: 14px;

    .article_block {

      .article_title {
        padding: 15px 8px 15px 12px;

        @include respond-to-min($resp_step_2) {
          padding: 16px 16px 23px 28px;
        }

        @include respond-to-min($resp_step_3) {
          padding: 16px 16px 23px 28px;
        }
      }

      .article_link {
        font-size: 16px;
        line-height: 1.5;
        //letter-spacing: .035em;
      }

      .article_stat {
        padding-top: 8px;

        @include respond-to-max($resp_step_2) {
          padding-top: 0;
        }
      }
    }
  }

  ._col_3_wide & {
    margin-bottom: 14px;

    @include respond-to-min($resp_step_2) {
      width: 33.3333%;
    }

    .article_block {

      .article_title {
        padding: 15px 8px 15px 12px;

        @include respond-to-min($resp_step_2) {
          padding: 16px 16px 23px 28px;
        }

        @include respond-to-min($resp_step_3) {
          padding: 16px 16px 23px 28px;
        }
      }

      .article_link {
        font-size: 16px;
        line-height: 1.5;
        //letter-spacing: .035em;
      }

      .article_stat {
        padding-top: 8px;

        @include respond-to-max($resp_step_2) {
          padding-top: 0;
        }
      }
    }
  }

  @include respond-to-max($resp_step_2) {
    ._show_2 & {
      &._third + ._third ~ .news_col {
        display: none;
      }
    }
  }

  @include respond-to-min($resp_step_2) {
    //padding-left: 40px;

    &._third {
      width: 33.3333%;
    }
  }
}

.news_aggregator {
  @extend %global_flex_block_row_wrap_flex-start;
  list-style: none;
  margin-left: -30px;
  position: relative;

  &:before {
    //right: 32px;
    //left: 32px;
    //top: 0;
    //bottom: 0;
    //display: block;
    //position: absolute;
    //content: '';
  }

  + .article_controls {
    margin: 0 0 22px;

    @include respond-to-min($resp_step_2) {
      margin: 0 0 28px;
    }

    @include respond-to-min($resp_step_3) {
      margin: 0 0 35px;
    }

    @include respond-to-min($resp_step_4) {
      margin: 0 0 32px;
    }
  }

  &._features {
    &:before {
      background: $red;
    }
  }

  > li {
    float: left;
    width: 50%;
    padding-left: 30px;

    @include respond-to-max($resp_step_2) {
      &:nth-child(n+3) {
        display: none;
      }
    }

    @include respond-to-min($resp_step_2) {
      width: 33.3333%;
    }
  }

  .article_link {
    font: 16px $RubikMed;
    //letter-spacing: .005em;
  }

  @include respond-to-min($resp_step_3) {
    .article_stat {
      padding-top: 10px;
    }
  }
}

.section_inner {
  width: 100%;
  margin: 0 auto;
  padding: 0 16px;
  max-width: 952px + 32px;

  @include respond-to-min($resp_step_2) {
    max-width: 1192px + 32px;
  }

  @include respond-to-min($resp_step_3) {
    max-width: 1384px + 32px;
  }

  @include respond-to-min($resp_step_4) {
    max-width: 1576px + 32px;
  }
}

